# ticketToRide

backend/: .env.example  README.md  demo_scenario.py  pyproject.toml  requirements.txt  ticketstoride.db
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  games.py  realtime.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  auth_service.py  game_service.py  realtime_manager.py  route_utils.py
backend/tests/: test_api_smoke.py  test_auth.py  test_realtime_ws.py  test_turn_rules.py
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Button.tsx  FeatureCard.tsx
frontend/src/context/: UserContext.tsx
frontend/src/lib/: authApi.ts  gameApi.ts  gameSocket.ts
frontend/src/pages/GamePage/: page.tsx
frontend/src/pages/GameRoomPage/: page.tsx
frontend/src/pages/HomePage/: page.tsx
frontend/src/pages/LobbyPage/: page.tsx
frontend/src/pages/LoginPage/: ForgotPassword.tsx  Signup.tsx  page.tsx
frontend/src/routes/: AppRoutes.tsx
